lobster is #1 priority

--- a/app.html
+++ b/app.html
@@ -4,7 +4,8 @@
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<title>TableChamp</title>
 	<link rel="stylesheet" type="text/css" charset="utf-8"  media="screen, projection" href="css/tablechamp.css" />
-	<link href="https://fonts.googleapis.com/css?family=Libre+Franklin:400,600" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css?family=Libre+Franklin:400,600" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
 </head>
 <body>
 	<div class="message"></div>
@@ -44,7 +45,6 @@
 		<a href="#" class="c-button c-button--md c-button--primary right add-score"><%=addScore%></a>
 		<div class="name">
 			<span class="org"></span>
-			<span class="game-type"></span>
 		</div>
 		<div class="header-block">
 			<a href="#" class="singles-toggle ranking-toggle c-button c-button--md is-selected" tabindex="-1" data-view="singles"><%=singles%></a>
@@ -295,7 +295,8 @@
 	</script>
 	<script type="text/html" id="statsPlayerGames">
 		<li><strong class="<%=status%>"><%=status%></strong> <%=t1%> (<%=t1Score%>) vs. <%=t2%> (<%=t2Score%>)</li>
-	</script>
+   </script>
+   
 	<script type="text/html" id="cssBlock">
 		<style>
 			/* Color 0 */
